--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/EndlessRunnerBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/EndlessRunnerBuild.data.br",
-        frameworkUrl: buildUrl + "/EndlessRunnerBuild.framework.js.br",
-        codeUrl: buildUrl + "/EndlessRunnerBuild.wasm.br",
+        dataUrl: buildUrl + "/EndlessRunnerBuild.data",
+        frameworkUrl: buildUrl + "/EndlessRunnerBuild.framework.js",
+        codeUrl: buildUrl + "/EndlessRunnerBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "EndlessRunner2D",
